force-app/main/default/objects/WebshopFeaturedAd__c/WebshopFeaturedAd__c.object-meta.xml
<CustomObject>
    <description>CRM-1091 Featured Ad Implementation</description>
    <label>Featured Ad</label>
    <nameField>
        <label>Featured Ad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Featured Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>