force-app/main/default/objects/WebshopFeaturedAd__c/fields/ButtonLabelGerman__c.field-meta.xml
<CustomField>
    <fullName>ButtonLabelGerman__c</fullName>
    <label>Button Label (German)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>