force-app/main/default/objects/WebshopFeaturedAd__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End date of Featured ad.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>