force-app/main/default/objects/WebshopFeaturedAd__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>The related image.</description>
    <label>Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>