force-app/main/default/objects/WebshopFeaturedAd__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start date of featured ad campaign.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>