force-app/main/default/objects/WebshopFeaturedAd__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>Subtitle of Featured Ad.</description>
    <label>Subtitle</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>