force-app/main/default/objects/WebshopFeaturedAd__c/fields/SubtitleGerman__c.field-meta.xml
<CustomField>
    <fullName>SubtitleGerman__c</fullName>
    <label>Subtitle (German)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>