force-app/main/default/objects/WebshopFeaturedAd__c/fields/TitleGerman__c.field-meta.xml
<CustomField>
    <fullName>TitleGerman__c</fullName>
    <label>Title (German)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>